[tool.poetry]
name = "poseidon-py"
version = "0.1.0"
description = "Python implementation of Poseidon hash"
authors = ["drknzz <kamil.jankowski.x@gmail.com>"]
readme = "README.md"
packages = [{include = "poseidon_py"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.3.0"
pylint = "^2.17.1"
pyright = "^1.1.301"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = true
