[tool.poetry]
name = "poseidon-py"
version = "0.1.4"
description = "Python implementation of Poseidon hash"
authors = ["drknzz <kamil.jankowski.x@gmail.com>"]
readme = "README.rst"
packages = [{include = "poseidon_py"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.3.0"
pylint = "^2.17.1"
pyright = "^1.1.301"

[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"
